- Added Ancient Elven Masonry to the loot table of Shandaral Hunter Spirit for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Shandaral Warrior Spirit for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Unbound Corrupter for the quest The Stone That Started A Revolution.
- Added Ancient Elven Masonry to the loot table of Shandaral Spirit Wolf for the quest The Stone That Started A Revolution.
- Updated the flags of Ancient Elven Masonry to allow every member of a group to loot it.

[2022-05-09]
- Updated the drop chance of Flesh Giant Spine from Pustulent Horror for the quests Neutralizing the Plague and Neutralizing the Plague.

[2022-05-10]
- Updated the flags of Cult of the Damned Research - Page 1 to allow every member of a group to loot it.
- Updated the flags of Cult of the Damned Research - Page 2 to allow every member of a group to loot it.
- Updated the flags of Cult of the Damned Research - Page 3 to allow every member of a group to loot it.
- Added Emerald Acorn to the loot table of Nightmare Figment for the quest Hope Within the Emerald Nightmare.
- Updated the flags of Emerald Acorn to allow every member of a group to loot it.

[2022-05-11]
- Added Broken Shard of Horror to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Added Broken Shard of Despair to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Added Broken Shard of Suffering to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Updated the flags of Broken Shard of Horror to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Despair to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Suffering to allow every member of a group to loot it.