@@ -359,6 +359,11 @@ INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (2801
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=28565 AND `ItemId`=38687;
 INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (28565, 1, 38687);
 
+-- Charred Wreckage (Quest: Clean Up (Id: 12818))
+-- Savage Hill Scavenger
+DELETE FROM `creature_questitem` WHERE `CreatureEntry`=29404 AND `ItemId`=40603;
+INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (29404, 1, 40603);
+
 -- Scourge Scrap Metal (Quest: Making Something Out Of Nothing (Id: 12901))
 -- Vargul Deathwaker
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=29449 AND `ItemId`=41399;
